--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     font-size: 18px;
     margin: 1rem 0;
     padding: 13px 25px;
-
+}
 .button a {
     color: #fff;
     text-decoration: none;
